--- a/initialAnalysis.Rmd
+++ b/initialAnalysis.Rmd
@@ -12,14 +12,9 @@ output: html_document
 
 #creating count matrix
 library(tximeta)
-
-library(AnnotationHub)
-library(ensembldb)
 library(BiocManager)
-
-library(tidyverse)
-
-
+library(dplyr)
+library(DESeq2)
 ```
 
 ## Protocol:
@@ -34,8 +29,8 @@ import data table & create table with file paths to sample quant files
 
 data_table = read.delim("data_table", stringsAsFactors = F)
 
-txdata = data_table %>% dplyr::select(c(SampleName, QuantFile))
-names(txdata) = c("names", "files")
+txdata = data_table %>% dplyr::select(c(SampleName, SampleGenotype, SampleTime, QuantFile)) %>%
+  dplyr::rename(names = SampleName, files = QuantFile)
 
 dirPath = "/active/allenspach_e/AllenspachRNASeqData/2022_SH2B3_TcellSeq/data/"
 
@@ -43,43 +38,13 @@ dirPath = "/active/allenspach_e/AllenspachRNASeqData/2022_SH2B3_TcellSeq/data/"
 
 txdata = txdata %>% mutate(files = paste(dirPath, files, sep = ""))
 
-# test with one sample
-s = txdata[1,]
+#import quantifications
+se = tximeta(data.frame(as_tibble(txdata)))
 
-se = tximeta(txdata)
+#get quants at gene level
+gse = summarizeToGene(se)
+
 ```
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
