--- a/timecourse_Analysis.Rmd
+++ b/timecourse_Analysis.Rmd
@@ -7,20 +7,19 @@ title: "RNAseq: CD8+ OT-I Stimulation Timecourse in SH2B3 mice"
 output:
   pdf_document: default
   html_document: default
+    keep_md: yes
 ---
 
 ```{r setup, include=FALSE}
-# #reference genome 
-# library(BSgenome.Mmusculus.UCSC.mm10)
-# 
-# #annotations
-# library(org.Mm.eg.db)
-
-#creating count matrix
 library(tximeta)
 library(BiocManager)
 library(dplyr)
 library(DESeq2)
+
+knitr::opts_chunk$set(dev = "png",
+                      dpi = 300,
+                      echo = FALSE,
+                      cache = TRUE)
 ```
 
 ## Protocol:
@@ -52,8 +51,8 @@ gse = summarizeToGene(se)
 
 ```
 
-Using DESeq to get read counts
-
+Create DESeq dataset object with gene-level quants, prefilter out rows with zero
+reads
 ```{r createCountMatrix, include = T}
 
 #differential expression with DESeq2
@@ -61,8 +60,6 @@ dds = DESeqDataSet(gse, design = ~ SampleGenotype + SampleTime + SampleGenotype:
 
 #use if want to do transcript specific
 # dds = DESeqDataSet(se, design = ~ SampleGenotype + SampleTime + SampleGenotype:SampleTime)
-
-#filter out empty rows
 
 #get empty rows
 nonzero = rowSums(counts(dds)) > 1
@@ -73,13 +70,24 @@ dds$SampleGenotype = factor(dds$SampleGenotype, levels = c("WT", "KO")) %>%
   relevel(dds$SampleGenotype, ref = "WT")
 
 ```
-
+Run DESeq and get log2 fold changes for genotypes
 ```{r diffexp, include = T}
 
 dds = DESeq(dds)
 
 #log2 fold changes and pvalues for WT vs KO
 dds.res = results(dds, contrast = c("SampleGenotype", "WT", "KO"))
+
+
+count.res = dds.res
+count.res$symbol = mcols(dds)$symbol
+stim = plotCounts(dds, 
+                  which.min(count.res$padj),
+                  intgroup = c("SampleGenotype", "SampleTime"), returnData = T)
+stim$hour = as.numeric(as.character(stim$SampleTime))
+ggplot(stim,
+       aes(x = SampleTime, y = count, color = SampleGenotype, group = SampleGenotype)) + geom_point() +
+  stat_summary(fun = mean, geom = "line") + scale_y_log10()
 
 ```
 
@@ -108,6 +116,7 @@ dds.res$symbol = mapIds(org.Mm.eg.db,
 
 ```
 
+### QC: Sample Distances
 
 Visualizing sample distances
 ```{r distMatrix, echo=FALSE}
@@ -128,8 +137,9 @@ pheatmap::pheatmap(samplePoisDistMatrix, clustering_distance_rows = poisd$dd,
          clustering_distance_cols = poisd$dd, col = colors)
 ```
 
-PCA plot (all time points)
+### QC: PCA plots
 
+PCA plot (all time points)
 ```{r PCAplots, include = T}
 
 library(vsn)
@@ -167,9 +177,21 @@ mat = mat[-which(is.na(rownames(mat))),]
 mat = mat - rowMeans(mat)
 anno = as.data.frame(colData(vsd)[, c("SampleGenotype", "SampleTime")])
 
-# png(filename = "h1eatmap.png", width = 6, height = 6, units = "in", res = 300, type = "cairo")
+p = pheatmap::pheatmap(mat, annotation_col = anno)
+
+
+# png(file = "/active/allenspach_e/AllenspachRNASeqData/2022_SH2B3_TcellSeq/src/RNAseq/h1eatmap.png", width = 6, height = 6, units = "in", res = 300, type = "cairo")
+png('heatmap_plot.png', type = 'cairo')
+p
+print(p)
+while (!is.null(dev.list()))  dev.off()
+```
+
+```{r dev = "png"}
+
+p
+
 pheatmap::pheatmap(mat, annotation_col = anno)
-# while (!is.null(dev.list()))  dev.off()
 ```
 
 
@@ -210,8 +232,6 @@ ggplot(stim,
 ```
 
 Cluster significant genes by profile
-
-
 ```{r, echo = F}
 betas = coef(ddsTC)
 
